--- a/Mic.Web/appsettings.json
+++ b/Mic.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServicesUrls": {
+    "BonAPI": "https://localhost:7001"
+  }
+
 }
