--- a/AuthAPI/appsettings.json
+++ b/AuthAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=DESKTOP-D7RMKD4\\DB;Database=AuthAPI;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +9,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
