--- a/AuthAPI/appsettings.json
+++ b/AuthAPI/appsettings.json
@@ -8,6 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "123456aa!a",
+      "Issuer": "authApi",
+      "Audience": "Mclinet"
+    }
+  }
 }
