added jwt token service

--- a/AuthAPI/appsettings.json
+++ b/AuthAPI/appsettings.json
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "ApiSettings": {
     "JwtOptions": {
-      "Secret": "123456aa!a",
+      "Secret": "123456aa!a-sadfsadf;oow",
       "Issuer": "authApi",
       "Audience": "Mclinet"
     }
