--- a/Mic.Web/appsettings.json
+++ b/Mic.Web/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "ServicesUrls": {
-    "BonAPI": "https://localhost:7001"
+    "BonAPI": "https://localhost:7001",
+    "AuthAPI": "https://localhost:7002"
+
   }
 
 }
